--- a/website/style.css
+++ b/website/style.css
@@ -82,7 +82,7 @@ button:hover{
 }
 .side-panel{
     width: 100%;
-    height: 700px;
+    height: 600px;
     flex-shrink: 0;
     padding: 20px;
     color: #fff;
@@ -149,6 +149,11 @@ button:hover{
 .side-panel .credits .box .info img{
     width: 70px;
     border-radius: 100%;
+}
+.side-panel .credits .box .info a img{
+    width: 30px;
+    margin-top: 5px;
+    margin-left: 90px;
 }
 .side-panel .credits .box .info{
     margin: 25px;
